[FIX] style scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -107,3 +107,27 @@ html,
 .edit-video-container video::-ms-time {
   display: none !important;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #eee;
+  border-radius: 8px;
+  transition: .25s all;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ccc;
+  cursor: pointer;
+}
